.metadata/.plugins/org.eclipse.cdt.ui/fumigation entry pattern 2.build.log
14:16:41 **** Incremental Build of configuration Debug for project fumigation entry pattern 2 ****
make all 
Building file: ../src/fumigation entry pattern 2.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/fumigation entry pattern 2.d" -MT"src/fumigation entry pattern 2.o" -o "src/fumigation entry pattern 2.o" "../src/fumigation entry pattern 2.c"
../src/fumigation entry pattern 2.c:31:9: error: expected identifier or ‘(’ before ‘return’
   31 |         return EXIT_SUCCESS;
      |         ^~~~~~
../src/fumigation entry pattern 2.c:32:1: error: expected identifier or ‘(’ before ‘}’ token
   32 | }
      | ^
make: *** [src/subdir.mk:20: src/fumigation entry pattern 2.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

14:16:41 Build Failed. 3 errors, 0 warnings. (took 322ms)

